--- a/random_quotes/public/index.html
+++ b/random_quotes/public/index.html
@@ -26,7 +26,7 @@
     -->
 
     <link href="https://fonts.googleapis.com/css2?family=Spartan:wght@300&display=swap" rel="stylesheet">
-    <title>React App</title>
+    <title>Random Advice</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
