--- a/unsplash_clone/index.html
+++ b/unsplash_clone/index.html
@@ -4,49 +4,44 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Unsplash Clone</title>
-    <link rel="stylesheet" href="./css/style.css">
+    <title>Shades</title>
+
+    <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Baloo+Bhai+2:wght@500&family=Comfortaa&family=Potta+One&family=Roboto:wght@100&family=Ubuntu:wght@300&family=Varela+Round&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
+
 </head>
 <body>
-    <header class="header-section">
-        <div class="header-section">
-            <h1 class="logo">Photo</h1>
-            <p class="sub-line">The best royalty free images you can find on the internet</p>
 
-            <form action="./search.html">
-                <input type="text"  name="search" class="search-box" placeholder="search images">
-                <button class="search-btn" type="submit">Search</button>
+    <header class="header-section">
+        <div class="header-content">
+            <h1 class="logo">Shades</h1>
+            <p class="sub-line">High quality royalty free wallpapers</p>
+
+            <form action="search.html">
+                <!-- <input type="text" autocomplete="off" name="search" class="search-box" placeholder="search and download images"> -->
+                <button class="search-btn" type="submit">search</button>
             </form>
         </div>
     </header>
+    
+    <!-- popup window -->
+    <div class="image-popup hide">
+        <button class="close-btn"></button>
+        <a href="#" class="download-btn">download image</a>
+        <img src="" class="large-img" alt="">
+        <button class="controls pre-btn"><img src="img/pre.png" alt=""></button>
+        <button class="controls nxt-btn"><img src="img/nxt.png" alt=""></button>
+    </div>
+
+    <!-- gallery -->
 
     <section class="gallery">
-        <!-- <img src="./img/img (1).png" class="gallery-img" alt="">
-        <img src="./img/img (1).png" class="gallery-img" alt="">
-        <img src="./img/img (1).png" class="gallery-img" alt="">
-        <img src="./img/img (1).png" class="gallery-img" alt="">
-        <img src="./img/img (1).png" class="gallery-img" alt="">
-        <img src="./img/img (1).png" class="gallery-img" alt="">
-        <img src="./img/img (1).png" class="gallery-img" alt="">
-        <img src="./img/img (1).png" class="gallery-img" alt="">
-        <img src="./img/img (1).png" class="gallery-img" alt="">
-        <img src="./img/img (1).png" class="gallery-img" alt="">
-        <img src="./img/img (1).png" class="gallery-img" alt="">
-        <img src="./img/img (1).png" class="gallery-img" alt="">
-        <img src="./img/img (1).png" class="gallery-img" alt="">
-        <img src="./img/img (1).png" class="gallery-img" alt="">
-        <img src="./img/img (1).png" class="gallery-img" alt="">
-        <img src="./img/img (1).png" class="gallery-img" alt="">
-        <img src="./img/img (1).png" class="gallery-img" alt="">
-        <img src="./img/img (1).png" class="gallery-img" alt="">
-        <img src="./img/img (1).png" class="gallery-img" alt="">
-        <img src="./img/img (1).png" class="gallery-img" alt=""> -->
+        <!-- <img src="img/img (1).png" class="gallery-img" alt=""> -->
     </section>
 
-    <script src="./app.js"></script>
+    <script src="app.js"></script>
 
 </body>
 </html>
